# animus-desktop

./: .gitignore  OVERNIGHT_WORKLOG.md  README.md  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts  vitest.setup.ts
.animus/: config.json
.animus/workflows/: custom.yaml
.github/workflows/: homebrew-update.yml  release.yml
.interface-design/: system.md
docs/: DISTRIBUTION.md  PLUGIN-ECOSYSTEM.md  ROADMAP.md
docs/superpowers/plans/: 2026-06-15-wisp-design-system.md
docs/superpowers/specs/: 2026-06-15-wisp-design-system-design.md
homebrew/: animus.rb.template
scripts/: gen-wisp-app-icon.mjs  gen-wisp-tray-icons.mjs
src/: App.tsx  main.tsx  styles.css  vitest-dom.d.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/assets/: animus-copilot.yaml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_edit.rs  animus_cli.rs  chat.rs  cycle_logs.rs  daemon.rs  event_bridge.rs  event_log.rs  github.rs  lib.rs  local_folder.rs  main.rs  plugin.rs  project.rs  queue.rs  state.rs  subject.rs  template.rs  tray.rs  workflow.rs  workflow_yaml.rs
src/api/: _invoke.ts  agent_edit.ts  animus.ts  animus_secrets.ts  chat.ts  cycle_logs.ts  daemon.ts  event_bridge.ts  event_log.ts  github.ts  local_folder.ts  plugin.ts  project.ts  queue.ts  subject.ts  template.ts  workflow.ts  workflow_yaml.ts
src/components/: AgentFace.tsx  AnimusJson.tsx  AnimusStubs.test.tsx  AnimusStubs.tsx  AskCard.test.tsx  AskCard.tsx  Badge.tsx  Bridge.tsx  Button.tsx  CommandPalette.tsx  CommandPane.tsx  CopyButton.test.tsx  CopyButton.tsx  DiffView.test.tsx  DiffView.tsx  EmptyState.tsx  Markdown.tsx  PackCard.tsx  PluginCard.tsx  ProjectsRail.tsx  ProviderLogo.tsx  QueuePanel.test.tsx  QueuePanel.tsx  Spinner.tsx  StatusBar.tsx  TurnTimeline.test.tsx  TurnTimeline.tsx  Watchstrip.tsx  Wisp.test.tsx  Wisp.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  scroll-area.tsx  tooltip.tsx
src/data/: packs.ts  plugin_registry.ts
src/lib/: useWispState.ts  useWispTray.ts  utils.test.ts  utils.ts  wispExpression.test.ts  wispExpression.ts
src/state/: activeProject.ts  auth.ts  chat.ts  daemon.ts  projectEvents.ts  projects.ts  theme.ts  useAddProject.ts
src/types/: contracts.ts  daemon.ts  github.ts  plugin.ts  project.ts
src/views/: AddProjectFlow.tsx  Chat.tsx  CycleDetail.tsx  PopupView.tsx  ProjectDetail.tsx  ProjectList.tsx  Settings.tsx  WispShowcase.tsx
src/views/project/: AgentsView.tsx  ChatView.tsx  FilesView.tsx  InboxView.test.tsx  InboxView.tsx  JournalView.tsx  McpView.tsx  PluginsView.test.tsx  PluginsView.tsx  SecretsView.tsx  SkillsView.test.tsx  SkillsView.tsx  StreamView.tsx  SubjectsView.tsx  VisualizeView.tsx  WorkflowsView.tsx  chatProtocol.test.ts  chatProtocol.ts
templates/ci-cd/: README.md  SETUP.md  workflows.yaml
templates/ci-cd/scripts/: gh-status-post.sh
(+2 files in other folders)
