[package]
name = "animus-desktop"
version = "0.0.1"
description = "Animus Desktop — the app for AI teams"
authors = ["LaunchApp <hi@launchapp.dev>"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "animus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
