[package]
name = "animus-desktop"
version = "0.0.1"
description = "Animus Desktop — the app for AI teams"
authors = ["LaunchApp <hi@launchapp.dev>"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "animus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
