[package]
name = "animus-desktop"
version = "0.0.1"
description = "Animus Desktop — the app for AI teams"
authors = ["LaunchApp <hi@launchapp.dev>"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "animus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-window-state = "2.0"
tauri-plugin-deep-link = "2.0"
tauri-plugin-clipboard-manager = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
keyring = { version = "3", features = ["apple-native"] }
ts-rs = { version = "10", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.6"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.0"
tauri-plugin-global-shortcut = "2.0"

[dev-dependencies]
ts-rs = "10"

[features]
custom-protocol = ["tauri/custom-protocol"]
ts-rs-export = ["dep:ts-rs"]
